deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novel-translator-ingress
  namespace: novel-translator
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: >-
      novel-translator-novel-translator-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - <host>
      secretName: novel-translator-tls
  rules:
    - host: <host>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novel-translator-web
                port:
                  number: 80
